--- a/01/01_Einfuehrung.ipynb
+++ b/01/01_Einfuehrung.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -225,8 +225,10 @@
     "\n",
     "><div class=\"alert alert-block alert-info\">\n",
     "<b>In welchem Semester sind Sie?   </b></div>  \n",
+    "\n",
     "><div class=\"alert alert-block alert-info\">\n",
     "<b>Welchen Studiengang belegen Sie? <br>   </b></div>  \n",
+    "\n",
     "><div class=\"alert alert-block alert-info\">\n",
     "<b>Haben Sie Programmiererfahrung? </b></div>  "
    ]
@@ -277,7 +279,7 @@
     "-  **sehr kleine Beispiele** betrachtet\n",
     "-  **grundlegende Varianten von Algorithmen** betrachtet\n",
     "- **sehr einfache Implementierungen** durchgeführt\n",
-    "- **wenig eigentändig** gearbeitet"
+    "- **wenig eigenständig** gearbeitet"
    ]
   },
   {
@@ -369,9 +371,7 @@
     "\n",
     "Im Moodle gibt es\n",
     "- aktuelle Informationen zum Kurs\n",
-    "- die Jupyter-Notebooks / Links zu Colab-Versionen der Notebooks\n",
-    "- Material für die Übungen (eigener Lernraum)\n",
-    "- Funktionen zum Hochladen der Übungszettel"
+    "- die Jupyter-Notebooks / Links zu Colab-Versionen der Notebooks\n"
    ]
   },
   {
@@ -527,7 +527,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -676,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -710,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -723,7 +722,7 @@
        "(3000, [0])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +783,7 @@
        "[15, 20, 30]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -819,7 +818,7 @@
        "array([15, 20, 30])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -867,7 +866,7 @@
        "array([2, 1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -900,10 +899,10 @@
     {
      "data": {
       "text/plain": [
-       "array([1500, 2000, 3000])"
+       "array([15, 20, 30])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +914,7 @@
     "values_sorted_by_weight = values[sorted_indexes]\n",
     "weights_sorted_by_weight = weights[sorted_indexes]\n",
     "\n",
-    "values_sorted_by_weight\n",
+    "weights_sorted_by_weight\n",
     "\n"
    ]
   },
@@ -932,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -945,7 +944,7 @@
        "(3500, [0, 1])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -987,7 +986,7 @@
        "array([3000, 2000, 1500])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1022,7 @@
        "array([3000, 2000, 1500])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1170,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1180,7 +1179,7 @@
    "source": [
     "filename = \"../instances/knapsack/knapPI_1_5000_1000_1\"\n",
     "\n",
-    "values, weights, capacity  = read_knapsack_instance(filename)\n"
+    "values, weights, capacity  = read_knapsack_instance(filename)"
    ]
   },
   {
@@ -1198,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1242,7 +1241,34 @@
    },
    "source": [
     "><div class=\"alert alert-block alert-info\">\n",
-    "<b> Testen Sie den Greedy-Algorithmus mit verschiedenen Sortierungen und verlgeichen Sie mit der optimalen Lösung!</b></div>\n"
+    "<b> Testen Sie den Greedy-Algorithmus mit verschiedenen Sortierungen und vergleichen Sie mit der optimalen Lösung!</b></div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zielfunktionswert mit Ratio-Sortierung: 276379\n"
+     ]
+    }
+   ],
+   "source": [
+    "negative_ratio = values/weights * -1\n",
+    "\n",
+    "sorted_indexes = np.argsort(negative_ratio)\n",
+    "\n",
+    "values_sorted = values[sorted_indexes]\n",
+    "weights_sorted = weights[sorted_indexes]\n",
+    "values_sorted\n",
+    "\n",
+    "obj_val, solution = greedy_knapsack(values_sorted,weights_sorted,capacity)\n",
+    "\n",
+    "print (\"Zielfunktionswert mit Ratio-Sortierung:\", obj_val)\n"
    ]
   },
   {
