--- a/02/02_TSP_Greedy_Projekte.ipynb
+++ b/02/02_TSP_Greedy_Projekte.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -268,6 +268,24 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- probieren wir es aus!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -278,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -317,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -330,7 +348,7 @@
        "17"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +367,7 @@
    },
    "source": [
     "><div class=\"alert alert-block alert-info\">\n",
-    "<b>Wie können wir diesen Algorithmus durch geschickte Wahl einer Datenstruktur verbessern?</b></div>  \n"
+    "<b>Wie können wir diesen (Gesamt-)Algorithmus durch geschickte Wahl einer Datenstruktur verbessern?</b></div>  \n"
    ]
   },
   {
@@ -394,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -435,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -443,25 +461,18 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not a proper tour!\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "-1"
+       "17"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tour[0] = tour[1]\n",
+    "#tour[0] = tour[1]\n",
     "evaluate_tsp_solution(distance_matrix, tour)"
    ]
   },
@@ -481,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -514,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -525,8 +536,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not a proper tour!\n",
-      "Solution infeasible\n"
+      "Solution feasible, distance is:  17\n"
      ]
     }
    ],
@@ -575,15 +585,47 @@
     "siehe: https://github.com/fillipe-gsm/python-tsp\n",
     "\n",
     "### bietet:\n",
-    "- Funktionen zum Einlesen von TSP-Instanzen im tsplib-format\n",
-    "  \n",
-    "  \n",
+    "- Funktionen zum Einlesen von TSP-Instanzen im tsplib-format \n",
+    " - heuristische TSP-Algorithmen:\n",
+    "  - z.B. local search und simulated annealing\n",
+    "- exakte TSP-Algorithmen basierend auf Enumeration und dynamischer Programmierung\n",
+    "  - (vorsicht: dauert wahrscheinlich lange mit Instanzen > 10 Items)\n",
     "  "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "#### Ein paar Hilfen:\n",
+    "\n",
+    "- Installation mit `!pip install python-tsp`  (lokal und/oder in Google Colab)\n",
+    "\n",
+    "**Für Colab-User:** Instanzen in Colab bekommen:\n",
+    "- Download der gesamten Kursmaterialien als zip (Moodle)\n",
+    "- Zip auf eigenem Rechner entpacken\n",
+    "- in den Ordner \"instances/tsp\" gehen\n",
+    "- in Colab auf der linken Seite die Dateiansicht öffnen\n",
+    "- alle Dateien (\"a280.tsp\", etc) markieren und per drag&drop in Google Colab schieben\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Das Python-Paket `python-tsp` testen\n",
+    "\n",
+    "- TSP-Instanzen einlesen"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -593,9 +635,17 @@
    "source": [
     "from python_tsp.distances import tsplib_distance_matrix\n",
     "\n",
-    "tsplib_file = \"./../instances/tsp/a280.tsp\" # optimale Lösung 2579 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
-    "#tsplib_file = \"./../instances/tsp/brazil58.tsp\" # optimale Lösung 25395 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
-    "#tsplib_file = \"./../instances/tsp/berlin52.tsp\" # optimale Lösung 7542 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
+    "# Lokale Installation\n",
+    "instances_path = \"./../instances/tsp/\" \n",
+    "\n",
+    "#Im Fall von Colab nach drag&drop:\n",
+    "#instances_path = \"./\" \n",
+    "\n",
+    "instance_name = \"a280.tsp\" # optimale Lösung 2579 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
+    "#instance_name = \"brazil58.tsp\" # optimale Lösung 25395 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
+    "#tinstance_name = \"berlin52.tsp\" # optimale Lösung 7542 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
+    "tsplib_file = instances_path+instance_name \n",
+    "\n",
     "\n",
     "distance_matrix = tsplib_distance_matrix(tsplib_file)"
    ]
@@ -608,8 +658,7 @@
     }
    },
    "source": [
-    "- heuristische TSP-Algorithmen:\n",
-    "  - z.B. local search und simulated annealing"
+    " - heuristische TSP-Algorithmen:"
    ]
   },
   {
@@ -668,7 +717,8 @@
    },
    "source": [
     "- exakte TSP-Algorithmen basierend auf Enumeration und dynamischer Programmierung\n",
-    "  - (vorsicht: dauert wahrscheinlich lange mit Instanzen > 10 Items)"
+    "  - (vorsicht: dauert wahrscheinlich lange mit Instanzen > 10 Items)\n",
+    "  "
    ]
   },
   {
@@ -974,7 +1024,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
