--- a/03/03_Numba_Rollout.ipynb
+++ b/03/03_Numba_Rollout.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 104,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 105,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 106,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 109,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -658,7 +658,7 @@
     "\n",
     "instance_name = \"a280.tsp\" # optimale Lösung 2579 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
     "#instance_name = \"brazil58.tsp\" # optimale Lösung 25395 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
-    "instance_name = \"berlin52.tsp\" # optimale Lösung 7542 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
+    "#instance_name = \"berlin52.tsp\" # optimale Lösung 7542 (lt. http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/STSP.html)\n",
     "tsplib_file = instances_path+instance_name \n",
     "\n",
     "\n",
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 110,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -781,7 +781,7 @@
      "text": [
       "Distance: 3157 Evaluated:  3157\n",
       "CPU times: total: 125 ms\n",
-      "Wall time: 137 ms\n"
+      "Wall time: 116 ms\n"
      ]
     }
    ],
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -825,7 +825,7 @@
     "def nearest_neighbor_multi_start(distance_matrix):\n",
     "    best_distance = 999999\n",
     "    best_tour = None\n",
-    "    for start_node in reversed(range(len(distance_matrix))):\n",
+    "    for start_node in range(len(distance_matrix)):\n",
     "        tour, distance = tsp_nearest_neighbor(start_node, distance_matrix)\n",
     "        if distance < best_distance:\n",
     "            best_distance = distance\n",
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 113,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -849,14 +849,13 @@
      "output_type": "stream",
      "text": [
       "Solution feasible, distance is:  2975\n",
-      "CPU times: total: 32.1 s\n",
-      "Wall time: 32.1 s\n"
+      "CPU times: total: 29.3 s\n",
+      "Wall time: 29.3 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "\n",
     "tour, distance = nearest_neighbor_multi_start(distance_matrix)\n",
     "print_obj_and_eval_tsp_solution(distance_matrix,tour, distance)"
    ]
@@ -942,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 115,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -971,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 129,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -983,7 +982,7 @@
     "def select_nearest_neighbor(tour, distance_matrix):\n",
     "    \n",
     "    # node ist der letzte Knoten der tour\n",
-    "    node = tour[len(tour)-1]\n",
+    "    node = tour[-1]\n",
     "    \n",
     "    smallest_distance = 9999999999 ## grosser Wert\n",
     "    nearest_neighbor = 0\n",
@@ -998,7 +997,8 @@
     "            nearest_neighbor = neighbor\n",
     "            smallest_distance = distance_matrix[node][neighbor]            \n",
     "       \n",
-    "    return nearest_neighbor, smallest_distance "
+    "    return nearest_neighbor, smallest_distance \n",
+    "\n"
    ]
   },
   {
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 141,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1036,16 +1036,9 @@
     "        tour.append(node)\n",
     "        total_distance += distance\n",
     "        \n",
-    "    total_distance += distance_matrix[len(tour)-1, tour[0]]\n",
+    "    total_distance += distance_matrix[tour[-1]][tour[0]]\n",
     "    return tour, total_distance\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1060,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 142,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1094,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 144,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -1106,9 +1099,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution feasible, wrong distance:  3030  evaluation gave  3097\n",
-      "CPU times: total: 797 ms\n",
-      "Wall time: 795 ms\n"
+      "Solution feasible, distance is:  2975\n",
+      "CPU times: total: 1.17 s\n",
+      "Wall time: 1.17 s\n"
      ]
     }
    ],
@@ -1338,7 +1331,7 @@
     }
    },
    "source": [
-    "## Zwischen Greedy und Durchsuchen aller Zustände: Rollout"
+    "## Zwischen Greedy und Nutzung einer optimalen Abschätzung: Rollout"
    ]
   },
   {
