--- a/03/03_Numba_Rollout.ipynb
+++ b/03/03_Numba_Rollout.ipynb
@@ -1207,7 +1207,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 150,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1448,7 +1448,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "@njit\n",
     "def tsp_nearest_neighbor_partial_tour(tour, distance_matrix ):\n",
     "    \n",
     "    total_distance = 0\n",
@@ -1479,15 +1479,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 151,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
+    "@njit\n",
     "def select_using_rollout_nn(tour, distance_matrix):\n",
     "    \n",
     "    node = tour[len(tour)-1] \n",
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 152,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1534,7 +1534,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "@njit\n",
     "def tsp_rollout_nn(tour, distance_matrix):\n",
     "        \n",
     "    total_distance = 0\n",
@@ -1563,8 +1563,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 154,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1574,14 +1575,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n",
-      "Solution feasible, distance is:  8170\n"
+      "Solution feasible, distance is:  3018\n",
+      "CPU times: total: 1min 58s\n",
+      "Wall time: 1min 58s\n"
      ]
     }
    ],
    "source": [
-    "%time\n",
+    "%%time\n",
     "tour_rollout_nn, distance_rollout_nn = tsp_rollout_nn([0],distance_matrix)\n",
     "print_obj_and_eval_tsp_solution(distance_matrix, tour_rollout_nn, distance_rollout_nn)\n",
     "\n"
